--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -2,8 +2,10 @@
 @value primaryBackgroundImage, textPrimaryColor, textActiveColor from globals;
 
 .Dashboard {
+  height: 100%;
   padding: 0 172.5px;
   background-image: primaryBackgroundImage;
+  overflow-y: scroll;
 }
 
 .Dashboard .Logout {
